--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-<p>                      Hello 大家好                        </p>
-<p>        这里是智能医学检测实验室（IMT）的实验室网页        </p>
-<p>       很高兴你来到这里, 希望我们能够一起携手改变世界      </p>
+---
+layout: home
+# articles:
+#   excerpt_type: html
+---
